// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TicketAssignee/> render() should display teams only 1`] = `
<Dropdown
  active={false}
  addonType={false}
  className="classname"
  direction="down"
  inNavbar={false}
  isOpen={false}
  nav={false}
  toggle={[Function]}
>
  <DropdownToggle
    aria-haspopup={true}
    caret={true}
    className="toggle btn-transparent"
    color="secondary"
    type="button"
  >
    <span>
      Unassigned
    </span>
  </DropdownToggle>
  <DropdownMenu
    flip={true}
    right={true}
    style={
      Object {
        "width": "260px",
      }
    }
    tag="div"
  >
    <DropdownItem
      header={true}
      tag="button"
      toggle={true}
    >
      ASSIGN TO:
    </DropdownItem>
    <DropdownItem
      className="dropdown-item-input"
      header={true}
      tag="button"
      toggle={true}
    />
    <PeopleSearchResults
      handleTeams={true}
      handleUsers={false}
      onTeamClick={[Function]}
      onUserClick={[Function]}
      teams={
        Immutable.Seq [
          Immutable.Map {
            "id": 1,
            "name": "Team 1",
            "decoration": Immutable.Map {},
          },
          Immutable.Map {
            "id": 2,
            "name": "Team 2",
            "decoration": Immutable.Map {},
          },
        ]
      }
      users={
        Immutable.List [
          Immutable.Map {
            "id": 1,
            "name": "User 1",
            "email": "email1@foo.com",
            "meta": Immutable.Map {},
          },
          Immutable.Map {
            "id": 2,
            "name": "User 2",
            "email": "email2@foo.com",
            "meta": Immutable.Map {},
          },
        ]
      }
    />
  </DropdownMenu>
</Dropdown>
`;

exports[`<TicketAssignee/> render() should display the email of the agent assigned as its name because it has no name 1`] = `
<Dropdown
  active={false}
  addonType={false}
  className="classname"
  direction="down"
  inNavbar={false}
  isOpen={false}
  nav={false}
  toggle={[Function]}
>
  <DropdownToggle
    aria-haspopup={true}
    caret={true}
    className="toggle btn-transparent"
    color="secondary"
    type="button"
  >
    <AgentLabel
      className=""
      maxWidth="100"
      name="steve@acme.gorgias.io"
      profilePictureUrl=""
      shouldDisplayAvatar={true}
    />
  </DropdownToggle>
  <DropdownMenu
    flip={true}
    right={true}
    style={
      Object {
        "width": "260px",
      }
    }
    tag="div"
  >
    <DropdownItem
      header={true}
      tag="button"
      toggle={true}
    >
      ASSIGN TO:
    </DropdownItem>
    <DropdownItem
      className="dropdown-item-input"
      header={true}
      tag="button"
      toggle={true}
    />
    <PeopleSearchResults
      handleTeams={true}
      handleUsers={true}
      onTeamClick={[Function]}
      onUserClick={[Function]}
      teams={
        Immutable.Seq [
          Immutable.Map {
            "id": 1,
            "name": "Team 1",
            "decoration": Immutable.Map {},
          },
          Immutable.Map {
            "id": 2,
            "name": "Team 2",
            "decoration": Immutable.Map {},
          },
        ]
      }
      users={
        Immutable.List [
          Immutable.Map {
            "id": 2,
            "name": "User 2",
            "email": "email2@foo.com",
            "meta": Immutable.Map {},
          },
        ]
      }
    >
      <DropdownItem
        className="assigneeItem"
        tag="button"
        toggle={true}
      >
        <AgentLabel
          className="assigneeLabel"
          name="steve@acme.gorgias.io"
          profilePictureUrl=""
          shouldDisplayAvatar={true}
        />
        <i
          className="material-icons md-2"
          onClick={[Function]}
        >
          close
        </i>
      </DropdownItem>
      <DropdownItem
        className="item"
        onClick={[Function]}
        tag="button"
        toggle={true}
        type="button"
      >
        Assign yourself
      </DropdownItem>
    </PeopleSearchResults>
  </DropdownMenu>
</Dropdown>
`;

exports[`<TicketAssignee/> render() should display the info of the agent assigned 1`] = `
<Dropdown
  active={false}
  addonType={false}
  className="classname"
  direction="down"
  inNavbar={false}
  isOpen={false}
  nav={false}
  toggle={[Function]}
>
  <DropdownToggle
    aria-haspopup={true}
    caret={true}
    className="toggle btn-transparent"
    color="secondary"
    type="button"
  >
    <AgentLabel
      className=""
      maxWidth="100"
      name="Steve Frizeli"
      profilePictureUrl="profilePictureUrl"
      shouldDisplayAvatar={true}
    />
  </DropdownToggle>
  <DropdownMenu
    flip={true}
    right={true}
    style={
      Object {
        "width": "260px",
      }
    }
    tag="div"
  >
    <DropdownItem
      header={true}
      tag="button"
      toggle={true}
    >
      ASSIGN TO:
    </DropdownItem>
    <DropdownItem
      className="dropdown-item-input"
      header={true}
      tag="button"
      toggle={true}
    />
    <PeopleSearchResults
      handleTeams={true}
      handleUsers={true}
      onTeamClick={[Function]}
      onUserClick={[Function]}
      teams={
        Immutable.Seq [
          Immutable.Map {
            "id": 1,
            "name": "Team 1",
            "decoration": Immutable.Map {},
          },
          Immutable.Map {
            "id": 2,
            "name": "Team 2",
            "decoration": Immutable.Map {},
          },
        ]
      }
      users={
        Immutable.List [
          Immutable.Map {
            "id": 2,
            "name": "User 2",
            "email": "email2@foo.com",
            "meta": Immutable.Map {},
          },
        ]
      }
    >
      <DropdownItem
        className="assigneeItem"
        tag="button"
        toggle={true}
      >
        <AgentLabel
          className="assigneeLabel"
          name="Steve Frizeli"
          profilePictureUrl=""
          shouldDisplayAvatar={true}
        />
        <i
          className="material-icons md-2"
          onClick={[Function]}
        >
          close
        </i>
      </DropdownItem>
      <DropdownItem
        className="item"
        onClick={[Function]}
        tag="button"
        toggle={true}
        type="button"
      >
        Assign yourself
      </DropdownItem>
    </PeopleSearchResults>
  </DropdownMenu>
</Dropdown>
`;

exports[`<TicketAssignee/> render() should display the info of the agent assigned even if a team is assigned too 1`] = `
<Dropdown
  active={false}
  addonType={false}
  className="classname"
  direction="down"
  inNavbar={false}
  isOpen={false}
  nav={false}
  toggle={[Function]}
>
  <DropdownToggle
    aria-haspopup={true}
    caret={true}
    className="toggle btn-transparent"
    color="secondary"
    type="button"
  >
    <AgentLabel
      className=""
      maxWidth="100"
      name="steve@acme.gorgias.io"
      profilePictureUrl=""
      shouldDisplayAvatar={true}
    />
  </DropdownToggle>
  <DropdownMenu
    flip={true}
    right={true}
    style={
      Object {
        "width": "260px",
      }
    }
    tag="div"
  >
    <DropdownItem
      header={true}
      tag="button"
      toggle={true}
    >
      ASSIGN TO:
    </DropdownItem>
    <DropdownItem
      className="dropdown-item-input"
      header={true}
      tag="button"
      toggle={true}
    />
    <PeopleSearchResults
      handleTeams={true}
      handleUsers={true}
      onTeamClick={[Function]}
      onUserClick={[Function]}
      teams={Immutable.Seq […]}
      users={
        Immutable.List [
          Immutable.Map {
            "id": 2,
            "name": "User 2",
            "email": "email2@foo.com",
            "meta": Immutable.Map {},
          },
        ]
      }
    >
      <DropdownItem
        className="assigneeItem"
        tag="button"
        toggle={true}
      >
        <TeamLabel
          className="assigneeLabel"
          name="Team 1"
          shouldDisplayAvatar={true}
          shouldDisplayTeamIcon={true}
        />
        <i
          className="material-icons md-2"
          onClick={[Function]}
        >
          close
        </i>
      </DropdownItem>
      <DropdownItem
        className="assigneeItem"
        tag="button"
        toggle={true}
      >
        <AgentLabel
          className="assigneeLabel"
          name="steve@acme.gorgias.io"
          profilePictureUrl=""
          shouldDisplayAvatar={true}
        />
        <i
          className="material-icons md-2"
          onClick={[Function]}
        >
          close
        </i>
      </DropdownItem>
      <DropdownItem
        className="item"
        onClick={[Function]}
        tag="button"
        toggle={true}
        type="button"
      >
        Assign yourself
      </DropdownItem>
    </PeopleSearchResults>
  </DropdownMenu>
</Dropdown>
`;

exports[`<TicketAssignee/> render() should display the name of the team assigned because there is no user assigned 1`] = `
<Dropdown
  active={false}
  addonType={false}
  className="classname"
  direction="down"
  inNavbar={false}
  isOpen={false}
  nav={false}
  toggle={[Function]}
>
  <DropdownToggle
    aria-haspopup={true}
    caret={true}
    className="toggle btn-transparent"
    color="secondary"
    type="button"
  >
    <TeamLabel
      className=""
      maxWidth={100}
      name="Team 1"
      shouldDisplayAvatar={true}
      shouldDisplayTeamIcon={false}
    />
  </DropdownToggle>
  <DropdownMenu
    flip={true}
    right={true}
    style={
      Object {
        "width": "260px",
      }
    }
    tag="div"
  >
    <DropdownItem
      header={true}
      tag="button"
      toggle={true}
    >
      ASSIGN TO:
    </DropdownItem>
    <DropdownItem
      className="dropdown-item-input"
      header={true}
      tag="button"
      toggle={true}
    />
    <PeopleSearchResults
      handleTeams={true}
      handleUsers={true}
      onTeamClick={[Function]}
      onUserClick={[Function]}
      teams={Immutable.Seq […]}
      users={
        Immutable.List [
          Immutable.Map {
            "id": 1,
            "name": "User 1",
            "email": "email1@foo.com",
            "meta": Immutable.Map {},
          },
          Immutable.Map {
            "id": 2,
            "name": "User 2",
            "email": "email2@foo.com",
            "meta": Immutable.Map {},
          },
        ]
      }
    >
      <DropdownItem
        className="assigneeItem"
        tag="button"
        toggle={true}
      >
        <TeamLabel
          className="assigneeLabel"
          name="Team 1"
          shouldDisplayAvatar={true}
          shouldDisplayTeamIcon={true}
        />
        <i
          className="material-icons md-2"
          onClick={[Function]}
        >
          close
        </i>
      </DropdownItem>
      <DropdownItem
        className="item"
        onClick={[Function]}
        tag="button"
        toggle={true}
        type="button"
      >
        Assign yourself
      </DropdownItem>
    </PeopleSearchResults>
  </DropdownMenu>
</Dropdown>
`;

exports[`<TicketAssignee/> render() should display users only 1`] = `
<Dropdown
  active={false}
  addonType={false}
  className="classname"
  direction="down"
  inNavbar={false}
  isOpen={false}
  nav={false}
  toggle={[Function]}
>
  <DropdownToggle
    aria-haspopup={true}
    caret={true}
    className="toggle btn-transparent"
    color="secondary"
    type="button"
  >
    <span>
      Unassigned
    </span>
  </DropdownToggle>
  <DropdownMenu
    flip={true}
    right={true}
    style={
      Object {
        "width": "260px",
      }
    }
    tag="div"
  >
    <DropdownItem
      header={true}
      tag="button"
      toggle={true}
    >
      ASSIGN TO:
    </DropdownItem>
    <DropdownItem
      className="dropdown-item-input"
      header={true}
      tag="button"
      toggle={true}
    />
    <PeopleSearchResults
      handleTeams={false}
      handleUsers={true}
      onTeamClick={[Function]}
      onUserClick={[Function]}
      teams={
        Immutable.Seq [
          Immutable.Map {
            "id": 1,
            "name": "Team 1",
            "decoration": Immutable.Map {},
          },
          Immutable.Map {
            "id": 2,
            "name": "Team 2",
            "decoration": Immutable.Map {},
          },
        ]
      }
      users={
        Immutable.List [
          Immutable.Map {
            "id": 1,
            "name": "User 1",
            "email": "email1@foo.com",
            "meta": Immutable.Map {},
          },
          Immutable.Map {
            "id": 2,
            "name": "User 2",
            "email": "email2@foo.com",
            "meta": Immutable.Map {},
          },
        ]
      }
    >
      <DropdownItem
        className="item"
        onClick={[Function]}
        tag="button"
        toggle={true}
        type="button"
      >
        Assign yourself
      </DropdownItem>
    </PeopleSearchResults>
  </DropdownMenu>
</Dropdown>
`;

exports[`<TicketAssignee/> render() should not display any agent info because there is no assignee 1`] = `
<Dropdown
  active={false}
  addonType={false}
  className="classname"
  direction="down"
  inNavbar={false}
  isOpen={false}
  nav={false}
  toggle={[Function]}
>
  <DropdownToggle
    aria-haspopup={true}
    caret={true}
    className="toggle btn-transparent"
    color="secondary"
    type="button"
  >
    <span>
      Unassigned
    </span>
  </DropdownToggle>
  <DropdownMenu
    flip={true}
    right={true}
    style={
      Object {
        "width": "260px",
      }
    }
    tag="div"
  >
    <DropdownItem
      header={true}
      tag="button"
      toggle={true}
    >
      ASSIGN TO:
    </DropdownItem>
    <DropdownItem
      className="dropdown-item-input"
      header={true}
      tag="button"
      toggle={true}
    />
    <PeopleSearchResults
      handleTeams={true}
      handleUsers={true}
      onTeamClick={[Function]}
      onUserClick={[Function]}
      teams={
        Immutable.Seq [
          Immutable.Map {
            "id": 1,
            "name": "Team 1",
            "decoration": Immutable.Map {},
          },
          Immutable.Map {
            "id": 2,
            "name": "Team 2",
            "decoration": Immutable.Map {},
          },
        ]
      }
      users={
        Immutable.List [
          Immutable.Map {
            "id": 1,
            "name": "User 1",
            "email": "email1@foo.com",
            "meta": Immutable.Map {},
          },
          Immutable.Map {
            "id": 2,
            "name": "User 2",
            "email": "email2@foo.com",
            "meta": Immutable.Map {},
          },
        ]
      }
    >
      <DropdownItem
        className="item"
        onClick={[Function]}
        tag="button"
        toggle={true}
        type="button"
      >
        Assign yourself
      </DropdownItem>
    </PeopleSearchResults>
  </DropdownMenu>
</Dropdown>
`;

exports[`<TicketAssignee/> render() should not display teams because object is empty 1`] = `
<Dropdown
  active={false}
  addonType={false}
  className="classname"
  direction="down"
  inNavbar={false}
  isOpen={false}
  nav={false}
  toggle={[Function]}
>
  <DropdownToggle
    aria-haspopup={true}
    caret={true}
    className="toggle btn-transparent"
    color="secondary"
    type="button"
  >
    <span>
      Unassigned
    </span>
  </DropdownToggle>
  <DropdownMenu
    flip={true}
    right={true}
    style={
      Object {
        "width": "260px",
      }
    }
    tag="div"
  >
    <DropdownItem
      header={true}
      tag="button"
      toggle={true}
    >
      ASSIGN TO:
    </DropdownItem>
    <DropdownItem
      className="dropdown-item-input"
      header={true}
      tag="button"
      toggle={true}
    />
    <PeopleSearchResults
      handleTeams={false}
      handleUsers={true}
      onTeamClick={[Function]}
      onUserClick={[Function]}
      teams={Immutable.List []}
      users={
        Immutable.List [
          Immutable.Map {
            "id": 1,
            "name": "User 1",
            "email": "email1@foo.com",
            "meta": Immutable.Map {},
          },
          Immutable.Map {
            "id": 2,
            "name": "User 2",
            "email": "email2@foo.com",
            "meta": Immutable.Map {},
          },
        ]
      }
    >
      <DropdownItem
        className="item"
        onClick={[Function]}
        tag="button"
        toggle={true}
        type="button"
      >
        Assign yourself
      </DropdownItem>
    </PeopleSearchResults>
  </DropdownMenu>
</Dropdown>
`;

exports[`<TicketAssignee/> should read data from the redux store correctly 1`] = `
<TicketAssignee
  currentUser={
    Immutable.Map {
      "id": 1,
      "email": "steve@acme.gorgias.io",
    }
  }
  direction="left"
  dispatch={[Function]}
  handleTeams={true}
  handleUsers={true}
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
  teams={
    Immutable.Seq [
      Immutable.Map {
        "id": 1,
        "name": "Team 1",
        "decoration": Immutable.Map {},
      },
      Immutable.Map {
        "id": 2,
        "name": "Team 2",
        "decoration": Immutable.Map {},
      },
    ]
  }
  transparent={false}
  users={
    Immutable.List [
      Immutable.Map {
        "id": 1,
        "name": "User 1",
        "email": "email1@foo.com",
        "meta": Immutable.Map {},
      },
      Immutable.Map {
        "id": 2,
        "name": "User 2",
        "email": "email2@foo.com",
        "meta": Immutable.Map {},
      },
    ]
  }
/>
`;
